# news-feed

./: README.md  news.sh  news_2023-05-05.csv  pyproject.toml
news_feed/: app.py  scrapper.py  utils.py
