[tool.poetry]
name = "news-feed"
version = "0.1.0"
description = ""
authors = ["Luiz Paulo Coutinho <coutinholps@gmail.com>"]
readme = "README.md"
packages = [{include = "news_feed"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
